--- a/Server/demo/src/main/resources/application-dev.properties
+++ b/Server/demo/src/main/resources/application-dev.properties
@@ -11,7 +11,7 @@ server.tomcat.uri-encoding=utf-8
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/degreeproject
+spring.datasource.url=jdbc:mysql://localhost:3306/degreeproject?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.max-idle=10
