--- a/Server/demo/pom.xml
+++ b/Server/demo/pom.xml
@@ -171,6 +171,12 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+
 
     </dependencies>
 
