--- a/Server/demo/pom.xml
+++ b/Server/demo/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>demo</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>4.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
@@ -102,17 +102,17 @@
             <version>2.2.0</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.apache.lucene</groupId>-->
-<!--            <artifactId>IK-Analyzer</artifactId>-->
-<!--            <version>0.0.1</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>IK-Analyzer</artifactId>
+            <version>0.0.1</version>
+        </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.apache.lucene</groupId>-->
-<!--            <artifactId>lucene-analyzers</artifactId>-->
-<!--            <version>8.8.1</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-analyzers</artifactId>
+            <version>8.8.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.lucene</groupId>
